--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
         <a-entity light="type: point; intensity: 5.75; distance: 50; decay: 2"
           position="0 10 10"></a-entity>
-            
+          <a-entity light="color: #AFA; intensity: 1.5" position="-1 1 0"></a-entity>  
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/YvesBB/models/main/gorilla1.glb"></a-asset-item>
         </a-assets>
