--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
-                scale="0.1 0.1 0.1">
+                position='0 5 0'
+                scale="0.05 0.05 0.05">
             </a-entity>
         </a-marker>
 
