--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ c
                 position='0 0 0'
                 scale="1.8 1.8 1.8">
             </a-entity>
+             <a-entity
+                animation-mixer
+                gltf-model="#animated-asset2"
+                position='0 0 0'
+                scale="1.8 1.8 1.8">
+            </a-entity>
         </a-marker>
 
         <a-entity camera></a-entity>
