--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           position="100 100 100"></a-entity>
           <a-entity light="color: #BBB; intensity: 10.5" position="-10 10 10"></a-entity>  
         <a-assets>
+            <a-asset-item id="animated-asset3" src="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"></a-asset-item>
             <a-asset-item id="animated-asset2" src="https://raw.githubusercontent.com/YvesBB/models/main/bernard.glb"></a-asset-item>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/YvesBB/models/main/corbeau3.glb"></a-asset-item>
         </a-assets>
@@ -32,6 +33,12 @@ c
              <a-entity
                 animation-mixer
                 gltf-model="#animated-asset2"
+                position='0 0 0'
+                scale="1.8 1.8 1.8">
+            </a-entity>
+             <a-entity
+                animation-mixer
+                gltf-model="#animated-asset3"
                 position='0 0 0'
                 scale="1.8 1.8 1.8">
             </a-entity>
