--- a/index.html
+++ b/index.html
@@ -1,57 +1,52 @@
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    </head>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+<script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
 
-    <body style='margin : 0px; overflow: hidden;'>
-        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;precision: mediump;colorManagement: true;physicallyCorrectLights: true;">
-    
-        <a-entity light="type: point; intensity: 30.75; distance: 500; decay: 10"
-          position="100 100 100"></a-entity>
-          <a-entity light="color: #BBB; intensity: 10.5" position="-10 10 10"></a-entity>  
-        <a-assets>
-            <a-asset-item id="papillon2" src="https://raw.githubusercontent.com/YvesBB/models/main/papillon2.glb"></a-asset-item>
-            <a-asset-item id="animated-asset3" src="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"></a-asset-item>
-            <a-asset-item id="animated-asset2" src="https://raw.githubusercontent.com/YvesBB/models/main/bernard.glb"></a-asset-item>
-            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/YvesBB/models/main/corbeau3.glb"></a-asset-item>
-        </a-assets>
-c
-        <a-marker type='barcode' value='7'>
-            <a-box position='0 0.5 0' color="yellow"></a-box>
-        </a-marker>
+<style>
+  .arjs-loader {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-        <a-marker id="animated-marker" type='barcode' value='6'>
+  .arjs-loader div {
+    text-align: center;
+    font-size: 1.25em;
+    color: white;
+  }
+</style>
+
+<!-- rawgithack development URL -->
+<!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>-->
+<script src='../../../../aframe/build/aframe-ar-nft.js'></script>
+
+
+<body style='margin : 0px; overflow: hidden;'>
+   <!-- minimal loader shown until image descriptors are loaded -->
+  <div class="arjs-loader">
+    <div>Loading, please wait...</div>
+  </div>
+    <a-scene
+        vr-mode-ui='enabled: false;'
+        renderer="logarithmicDepthBuffer: true; precision: medium;"
+        embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
+
+        <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+        <a-nft
+            type='nft' url='./aframe/examples/image-tracking/nft/trex/trex-image/trex'
+            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                animation-mixer
-                gltf-model="#animated-asset"
-                position='0 0 0'
-                scale="1.8 1.8 1.8">
+                gltf-model='./trex/scene.gltf'
+                scale="5 5 5"
+                position="150 300 -100"
+                >
             </a-entity>
-             <a-entity
-                animation-mixer
-                gltf-model="#animated-asset2"
-                position='0 0 0'
-                scale="1.8 1.8 1.8">
-            </a-entity>
-             <a-entity
-                animation-mixer
-                gltf-model="#animated-asset3"
-                position='0 0 0'
-                scale="1.8 1.8 1.8">
-            </a-entity>
-            <a-entity
-                animation-mixer
-                gltf-model="#papillon2"
-                position='0 0 0'
-                scale="1.8 1.8 1.8">
-            </a-entity>
-        </a-marker>
-
-        <a-entity camera></a-entity>
-        </a-scene>
-    </body>
-</html>
+        </a-nft>
+		<a-entity camera></a-entity>
+    </a-scene>
+</body>
