--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
-      url="https://raw.githubusercontent.com/YvesBB/soleil/main/"
+      url="https://raw.githubusercontent.com/YvesBB/soleil/main"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
