--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       smoothThreshold="5"
     >
       <a-entity
+        animation-mixer
         gltf-model="#animated-asset3"
         scale="5 5 5"
         position="0 0 0"
