--- a/index.html
+++ b/index.html
@@ -33,12 +33,6 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
-     <a-assets>
-            <a-asset-item id="papillon2" src="https://raw.githubusercontent.com/YvesBB/models/main/papillon2.glb"></a-asset-item>
-            <a-asset-item id="animated-asset3" src="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"></a-asset-item>
-            <a-asset-item id="animated-asset2" src="https://raw.githubusercontent.com/YvesBB/models/main/bernard.glb"></a-asset-item>
-            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/YvesBB/models/main/corbeau3.glb"></a-asset-item>
-        </a-assets>
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
@@ -49,10 +43,9 @@
       smoothThreshold="5"
     >
       <a-entity
-        animation-mixer
-        gltf-model="#animated-asset3"
+        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         scale="5 5 5"
-        position="0 0 0"
+        position="50 150 0"
       >
       </a-entity>
     </a-nft>
