--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
+    <a-assets>
+            <a-asset-item id="papillon2" src="https://raw.githubusercontent.com/YvesBB/models/main/papillon2.glb"></a-asset-item>
+            <a-asset-item id="animated-asset3" src="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"></a-asset-item>
+            <a-asset-item id="animated-asset2" src="https://raw.githubusercontent.com/YvesBB/models/main/bernard.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/YvesBB/models/main/corbeau3.glb"></a-asset-item>
+        </a-assets>
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
