--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"
+        animation-mixer
+        gltf-model="#animated-asset3"
         scale="5 5 5"
         position="50 150 0"
       >
