--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     >
       <a-entity
         animation-mixer
-        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/scene.gltf"
+        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         scale="5 5 5"
         position="10 10 0"
       >
