--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     >
       <a-entity
         animation-mixer
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        gltf-model="https://github.com/YvesBB/models/blob/main/scene.gltf"
         scale="2 2 2"
         position="10 10 0"
       >
