--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     >
       <a-entity
         animation-mixer
-        gltf-model="https://github.com/YvesBB/models/main/scene.gltf"
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/scene.gltf"
         scale="2 2 2"
         position="10 10 0"
       >
