--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a-entity
         animation-mixer
         gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/crane4.glb"
-        rotaion= "90 180 0"        
+        rotation= "90 180 0"        
         scale="2 2 2"
         position="100 -150 -200"
       >
