--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   >
     <a-assets>
             <a-asset-item id="papillon2" src="https://raw.githubusercontent.com/YvesBB/models/main/papillon2.glb"></a-asset-item>
-            <a-asset-item id="animated-asset3" src="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"></a-asset-item>
+            <a-asset-item id="crane" src="https://raw.githubusercontent.com/YvesBB/models/main/crane4.glb"></a-asset-item>
             <a-asset-item id="animated-asset2" src="https://raw.githubusercontent.com/YvesBB/models/main/bernard.glb"></a-asset-item>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/YvesBB/models/main/corbeau3.glb"></a-asset-item>
         </a-assets>
@@ -50,7 +50,7 @@
     >
       <a-entity
         animation-mixer
-        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/crane4.glb"
+        gltf-model="#crane"
         rotation= "180 0 180"        
         scale="5 5 5"
         position="100 -250 -200"
