--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     >
       <a-entity
         animation-mixer
-        gltf-model="#crane"
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/crane4.glb"
         rotation= "180 0 180"        
         scale="5 5 5"
         position="100 -250 -200"
