--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         position="100 -250 -200"
       >
       </a-entity>
+      <a-entity
+        animation-mixer
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/bernard2.glb"
+        rotation= "180 0 180"        
+        scale="5 5 5"
+        position="100 -250 -200"
+      >
+      </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
