--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </a-entity>
       <a-entity
         animation-mixer
-        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/bernard2.glb"
+        gltf-model="#animated-asset2"
         rotation= "90 0 180"        
         scale="4 4 4"
         position="200 -250 -200"
