--- a/index.html
+++ b/index.html
@@ -49,20 +49,17 @@
       smoothThreshold="5"
     >
       <a-entity
-        animation-mixer
         gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/crane4.glb"
         rotation= "180 0 180"        
         scale="5 5 5"
-        position="100 -250 -200"
-      >
+        position="100 -250 -200">
       </a-entity>
       <a-entity
         animation-mixer
         gltf-model="#animated-asset2"
         rotation= "90 0 180"        
         scale="4 4 4"
-        position="200 -250 -200"
-      >
+        position="200 -250 -200">
       </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
