--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </a-entity>
       <a-entity
         animation-mixer
-        gltf-model="#animated-asset2"
+        id "man" gltf-model="#animated-asset2"
         rotation= "90 0 180"        
         scale="4 4 4"
         position="200 -250 -200">
