--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         position="100 -250 -200"
       >
       </a-entity>
+       <a-entity
+        animation-mixer
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/bernard2.glb"
+        rotation= "90 0 180"        
+        scale="4 4 4"
+        position="100 -250 -200"
+      >
+      </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
