--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
         position="250 -250 -200"
       >
       </a-entity>
+       </a-entity>
+       <a-entity
+        animation-mixer
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/corbeau4.glb"
+        rotation= "170 0 180"        
+        scale="4 4 4"
+        position="100 -250 -200"
+      >
+      </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
