--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
         position="100 -250 -200"
       >
       </a-entity>
+     <a-entity
+        animation-mixer
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/papillon3.glb"
+        rotation= "45 45 270"        
+        scale="4 4 4"
+        position="100 -250 -200"
+      >
+      </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
