--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
         position="200 -050 -300"
       >
       </a-entity>
+     <a-entity
+        animation-mixer
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/papillon3.glb"
+        rotation= "0 0 0"        
+        scale="4 4 4"
+        position="0 100 100"
+      >
+      </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
   </a-scene>
