--- a/index.html
+++ b/index.html
@@ -83,10 +83,18 @@
       </a-entity>
      <a-entity
         animation-mixer
-        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/papillon3.glb"
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/papillon4.glb"
         rotation= "0 0 0"        
         scale="4 4 4"
-        position="0 100 100"
+        position="-100 50 300"
+      >
+      </a-entity>
+     <a-entity
+        animation-mixer
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/papillon5.glb"
+        rotation= "45 45 0"        
+        scale="4 4 4"
+        position="250 -200 200"
       >
       </a-entity>
     </a-nft>
