--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
         position="50 -050 -300"
       >
       </a-entity>
+    <a-entity
+        gltf-model="https://raw.githubusercontent.com/YvesBB/models/main/papillon5.glb"
+        rotation= "180 0 180"        
+        scale="4 4 4"
+        position="200 -050 -300"
+      >
+      </a-entity>
     
     </a-nft>
     <a-entity camera></a-entity>
