--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
+     <a-entity light="type: point; intensity: 30.75; distance: 500; decay: 10"
+          position="100 100 100"></a-entity>
+          <a-entity light="color: #BBB; intensity: 10.5" position="-10 10 10"></a-entity> 
     <a-assets>
             <a-asset-item id="papillon2" src="https://raw.githubusercontent.com/YvesBB/models/main/papillon2.glb"></a-asset-item>
             <a-asset-item id="animated-asset3" src="https://raw.githubusercontent.com/YvesBB/models/main/crane3.glb"></a-asset-item>
