--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+<script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/cfe5f316/dist/aframe-extras.js"></script>
 
 <style>
   .arjs-loader {
@@ -63,6 +64,7 @@
         rotation= "90 0 180"        
         scale="1.5 1.5 1.5"
         position="250 -250 -200"
+        animation-mixer
       >
       </a-entity>
        
