--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         rotation= "180 0 180"        
         scale="3 3 3"
         position="100 -250 -200"
+        animation-mixer
       >
       </a-entity>
      <a-entity
@@ -80,6 +81,7 @@
         rotation= "180 0 180"        
         scale="4 4 4"
         position="50 -050 -300"
+        animation-mixer
       >
       </a-entity>
    
